# wealthwise-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  deploy.sh  docker-compose.yml  mlflow.db  pyproject.toml  pytest.ini  requirements.txt  wealthwise-key-ec2.pem
.github/workflows/: deploy.yml
data/: transactions.csv
mlruns/1/models/m-ca03709c478b4c04890fe25096c38de5/artifacts/: MLmodel
mlruns/2/models/m-545d14bea11441f382a9755c40b96bb7/artifacts/: MLmodel  conda.yaml
mlruns/2/models/m-c1bf507d80d34a62b818924c403bdad1/artifacts/: MLmodel
mlruns/2/models/m-f0636608c007458aa3af8bf0c117022e/artifacts/: MLmodel
scripts/: generate_data.py  train_pipeline.py
src/: config.py  graph.py  logger.py  tools.py
tests/: test_graph.py  test_tools.py
